# IntelliRoom

./: .dockerignore  .env.example  .gitignore  Image Generation (4).json  README.md  README_PROGRESS.md  docker-compose.ai.yml  docker-compose.prod.yml  docker-compose.yml  intelliroom_local_orchestrator.py  main.tex  nginx.conf  nginx.prod.conf  notes and future plans.txt  package.json  pnpm-lock.yaml  project-root.npmrc  references.bib  test-ui.html  test-workflow.js
.devcontainer/: Dockerfile  devcontainer.json
ai/: Dockerfile  requirements.txt
appendices/: appendixA_market_analysis.tex  appendixB_use_cases.tex  appendixC_business_model.tex  appendixD_ui_mockups.tex
backend/: .env  .gitignore  Dockerfile  Dockerfile.prod  README.md  fetch_test_data.js  index.js  package-lock.json  package.json  pnpm-lock.yaml
backend/ai/VDB-RecommEngine/: pyproject.toml
chapters/: chapter1_introduction.tex  chapter2_literature.tex  chapter3_requirements.tex  chapter4_design.tex  chapter5_conclusion.tex
database/: Initialization.txt  IntelliRoom_DB.credit_transactions.json  IntelliRoom_DB.object.json  compass-connections.json
figures/: erd_core_commerce.tex  erd_design_community.tex  erd_diagram_tikz.tex  system_architecture_tikz.tex
frontend/: .env  .gitignore  .npmrc  App.jsx  Dockerfile.prod  README.md  env  index.html  nginx.prod.conf  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.js
frontmatter/: abbreviations.tex  abstract.tex  acknowledgements.tex  cover.tex  declaration.tex
(+607 files in other folders)
