[project]
name = "intelliroom-feature"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.7",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.44.0",
]
